changed aws links to more secure method

--- a/flask-site/app/Dockerfile
+++ b/flask-site/app/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.8-slim 
-COPY requirements.txt ./
+USER root
+WORKDIR /app
+ADD . /app
 RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
-COPY . .
-EXPOSE 5000
-
+EXPOSE 80
+ENV NAME World
 CMD ["python3", "app.py"]
