--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 
 # Created by https://www.gitignore.io/api/osx,linux,python,windows,pycharm,visualstudiocode
 
+#AWS Link files
+streamlit-site/project/aws_links.json
+flask-site/app/aws_links.json
+
 ### Linux ###
 *~
-streamlit-site/ecr-push.sh
-flask-site/app/ecr-push.sh
-flask-site/terraform/.terraform/
+
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
