--- a/flask-site/requirements.txt
+++ b/flask-site/requirements.txt
@@ -1,16 +1,22 @@
-Flask==2.2.3
-flask_dance==6.2.0
-Flask_Login==0.6.2
-Flask_Migrate==4.0.4
-Flask_Minify==0.41
-flask_restx==1.1.0
-flask_sqlalchemy==3.0.3
-Flask_WTF==1.1.1
-Jinja2==3.1.2
-pandas==1.5.3
-PyJWT==2.6.0
-requests==2.28.1
-SQLAlchemy==2.0.7
-Werkzeug==2.2.3
-WTForms==3.0.1
-WTForms_Alchemy==0.18.0
+flask==2.0.2
+Werkzeug==2.0.3
+jinja2==3.0.2
+flask_login==0.5.0
+flask_migrate==3.1.0
+WTForms==3.0.0
+flask_wtf==1.0.0
+flask_sqlalchemy==2.5.1
+sqlalchemy==1.4.29
+# email_validator==1.1.3
+gunicorn==20.1.0
+flask-restx==0.5.1
+python-dotenv==0.19.2
+Flask-Minify==0.37
+Flask-Dance==5.1.0
+blinker==1.4
+pyOpenSSL
+WTForms-Alchemy==0.18.0
+PyJWT~=2.4.0
+
+# flask_mysqldb
+# psycopg2-binary
